# roommates

./: Cargo.toml  README.md  search-index.js  settings.html  source-files.js
examples/: cli.rs  electric.csv  internet.csv  responsibility_intervals.csv  responsibility_proportions.rs  water.csv  weather.csv
linregress/: all.html  enum.Error.html  enum.InvalidValueHandling.html  index.html  sidebar-items.js  struct.FormulaRegressionBuilder.html  struct.InconsistentSlopes.html  struct.RegressionData.html  struct.RegressionDataBuilder.html  struct.RegressionModel.html  struct.RegressionParameters.html
nalgebra/: struct.Complex.html  trait.RealField.html
num/: struct.BigInt.html  struct.BigUint.html  struct.Complex.html  trait.Bounded.html  trait.CheckedAdd.html  trait.CheckedDiv.html  trait.CheckedMul.html  trait.CheckedSub.html  trait.FromPrimitive.html  trait.Integer.html  trait.Num.html  trait.NumCast.html  trait.One.html  trait.PrimInt.html  trait.Saturating.html  trait.Signed.html  trait.ToPrimitive.html  trait.Unsigned.html  trait.Zero.html
num_complex/: index.html  struct.Complex.html  struct.ParseComplexError.html  type.Complex32.html  type.Complex64.html
rand/: trait.CryptoRng.html  trait.RngCore.html  trait.SeedableRng.html
rand_distr/: struct.Standard.html  trait.Distribution.html
roommates/: all.html  enum.Error.html  enum.InvalidFixedCost.html  index.html  sidebar-items.js  struct.DateInterval.html  struct.ResponsibilityInterval.html  struct.ResponsibilityRecord.html  struct.Roommate.html  struct.RoommateGroup.html
src/: bill.rs  interval.rs  (+8 more)
(+7290 files in other folders)
