[package]
name = "roommates"
version = "0.1.0"
authors = ["Jonah Weissman <jonahrweissman@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.11"
itertools = "0.9.0"
linregress = { git = "https://github.com/n1m3/linregress" }
num = "0.3.0"
steel-cent = "0.2.3"
thiserror = "1.0"

[dev-dependencies]
clap = "2.33.1"
csv = "1.1"
