[package]
name = "roommates"
version = "0.1.0"
authors = ["Jonah Weissman <jonahrweissman@gmail.com>"]
edition = "2018"
description = "A library for splitting costs between roommates"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = "0.4.11"
itertools = "0.9.0"
linregress = { git = "https://github.com/jonahweissman/linregress", branch = "predict" }
num = "0.3.0"
steel-cent = "0.2.3"

[dev-dependencies]
clap = "2.33.1"
csv = "1.1"
